--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Tryst</string>
+    <string name="app_name" translatable="false">Tryst</string>
+    <string name="sharing_geolocation_using_tryst">Sharing geolocation using Tryst</string>
+    <string name="stop">Stop</string>
+    <string name="geolocation_service">Geolocation service</string>
 </resources>
