--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="sharing_geolocation_using_tryst">Sharing geolocation using Tryst</string>
     <string name="stop">Stop</string>
     <string name="geolocation_service">Geolocation service</string>
+    <string name="you">You</string>
 </resources>
