User name editing on the preferences screen.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -13,4 +13,5 @@
     <string name="back">Назад</string>
     <string name="avatar">Аватар</string>
     <string name="your_placemark">Ваша геометка</string>
+    <string name="your_name">Ваше имя</string>
 </resources>
