Settings for the user's group selection.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="your_placemark">Your placemark</string>
     <string name="your_name">Your name</string>
     <string name="yandex_mapkit_conditions_link" translatable="false">https://yandex.ru/dev/commercial/doc/ru/concepts/mapkit</string>
+    <string name="your_group">Your group</string>
 </resources>
