--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -14,4 +14,5 @@
     <string name="avatar">Аватар</string>
     <string name="your_placemark">Ваша геометка</string>
     <string name="your_name">Ваше имя</string>
+    <string name="your_group">Ваша группа</string>
 </resources>
